Fix logo being squished and buttons overlapping logo at certain screen sizes

--- a/css/style-narrow.css
+++ b/css/style-narrow.css
@@ -78,8 +78,7 @@
 
 		#logo a img
 		{
-			height: 100%;
-			width: 32%;
+			height: 26px;
 		}
 
 /*********************************************************************************/
