--- a/css/style.css
+++ b/css/style.css
@@ -651,6 +651,7 @@
 			background-color: rgba(255,207,6, 1);
 			color: #43485e !important;
 			border: none;
+			margin-left: 0.5em;
 		}
 
 /*********************************************************************************/
@@ -710,8 +711,7 @@
 				#nav > ul > li > span
 				{
 					display: block;
-					margin-left: 0.7em;
-					padding: 0.20em 1.2em;
+					padding: 0.20em 1em;
 					letter-spacing: 0.06em;
 					text-decoration: none;
 					font-weight: 300;
